fix some errors in design

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
         $('#newsletter_email').focus(function(){
           $(this).val('');
         });
-        $('#slider').nivoSlider({controlNav:false});
+        $('#slider').nivoSlider({controlNav:true, effect: 'fade', directionNav: false});
         $("a[rel^='prettyPhoto']").prettyPhoto();
       });
     /[if IE 6]
