--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,4 +1,4 @@
-- title "Pages"
+- title "Palsofa"
 #slider.slideshow
   - @slideshows.each do |image|
     = image_tag(image.image.url(), :height => "384", :width => "946", :alt => image.description)
