--- a/app/views/pages/trabajo.html.haml
+++ b/app/views/pages/trabajo.html.haml
@@ -26,5 +26,5 @@
             %strong.date= l(job.datejob, :format => :long)
             .contentOferta
               = job.description
-            %a.linkOferta{:href => "mailto:empleo@palsofa.com", :title => "Postular por correo"} Postular por correo »
+            %a.linkOferta{:href => "mailto:empleo@palsofa.com", :title => "Enviar candidatura"} Postular por correo »
   %br.clear/
