--- a/app/views/products/_share.html.erb.erb
+++ b/app/views/products/_share.html.erb.erb
@@ -1,10 +1,3 @@
 <!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style">
-<span class="addthis_separator">|</span>
-<a class="addthis_button_facebook"></a>
-<a class="addthis_button_myspace"></a>
-<a class="addthis_button_email"></a>
-<a class="addthis_button_twitter"></a>
-</div>
-<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4bde224017af99f8"></script>
+<a class="addthis_button" href="http://addthis.com/bookmark.php?v=250&amp;username=xa-4be8538a6481718d"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" width="83" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4be8538a6481718d"></script>
 <!-- AddThis Button END -->
