correct number on slideshow

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -678,18 +678,23 @@ ul.listImgTiendas li{
   width:100px;
 }
 .nivo-controlNav a{
-    background:url("../images/bgNumber.png") no-repeat scroll left top transparent;
+    background:url(/images/bgNumber.png) no-repeat scroll left top transparent;
     width:17px;
-    height:17px;
-    padding:0px 0px 0px 0px;
+    height:16px;
+    padding:1px 0px 0px 0px;
     font-weight: normal;
     color: #000;
     display: block;
     float: left;
     margin: 0px 5px 0px 0px;
     text-align: center;
+
 }
-.nivo-controlNav a:hover, .nivo-controlNav a.active {
+.nivo-controlNav a:hover{
+    text-decoration: none;
+    color: #3A99D4;
+}
+.nivo-controlNav a.active {
     text-decoration: none;
     color: #3A99D4;
     font-weight: bold;
