added modification on share this

--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -6,7 +6,7 @@
         <label>
           Categoria
         </label>
-        <%= form.select(:category_list, " ,SOFÁS 3+2,SOFÁS,CAMA,CHAISELONGUE,RELAX,RINCONERAS,BUTACAS,DESCANSO,OUTLET".split(','), :multiple => true, :style => 'height: 100px;') %>
+        <%= form.select(:category_list, " ,SOFÁS 3+2,SOFÁS,SOFÁS CAMA,CHAISELONGUE,RELAX,RINCONERAS,BUTACAS,DESCANSO,OUTLET".split(','), :multiple => true, :style => 'height: 100px;') %>
         | <%= form.select(:special_list, " ,Oportunidad,Novedad,Mas vendido".split(','), :multiple => true, :style => 'height: 100px;') %>
         | <%= form.select(:principal_list, " ,Home".split(','), :multiple => true, :style => 'height: 100px;') %>
       </li>
