--- a/app/views/products/_share.html.erb.erb
+++ b/app/views/products/_share.html.erb.erb
@@ -1,3 +1,6 @@
 <!-- AddThis Button BEGIN -->
-<a class="addthis_button" href="http://addthis.com/bookmark.php?v=250&amp;username=xa-4be8538a6481718d"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" width="83" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4be8538a6481718d"></script>
+<div class="addthis_toolbox addthis_default_style">
+<a href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4beb66e7576300a4" class="addthis_button_compact">Compartir</a>
+</div>
+<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4beb66e7576300a4"></script>
 <!-- AddThis Button END -->
