--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -37,6 +37,7 @@
         %li
       - else
         %li
+          Estas aqui
           = link_to('Home', root_path, :title => "Inicio")
           %b >
         %li
