--- a/app/views/products/_share.html.erb.erb
+++ b/app/views/products/_share.html.erb.erb
@@ -1,6 +1,6 @@
 <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style">
-<a href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4beb66e7576300a4" class="addthis_button_compact">Compartir</a>
+  <a href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4beb66e7576300a4" class="addthis_button_compact"><%= image_tag('http://s7.addthis.com/static/btn/sm-share-es.gif') %></a>
 </div>
 <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4beb66e7576300a4"></script>
 <!-- AddThis Button END -->
