added google analytics

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,3 +37,4 @@
         = content_tag :div, msg, :id => "flash_#{name}"
       = yield
       = render :partial => '/shared/footer'
+    = render :partial => '/shared/analytics'
