--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -23,12 +23,12 @@
       %li
         = link_to('SERVICIOS', {:controller => 'pages', :action => 'servicios'}, :title => "Nuestros servicios", :class => 'link_others')
       %li
-        = link_to('TRABAJA CON NOSOTROS', {:controller => 'pages', :action => 'trabajo'}, :title => "trabaja con nosotros", :class => 'link_others')
+        = link_to('TRABAJO', {:controller => 'pages', :action => 'trabajo'}, :title => "trabaja con nosotros", :class => 'link_others')
       %li
-        = link_to('TIENDAS', tiendas_path, :title => "Tiendas", :id => 'link_tiendas')
+        = link_to('TIENDA', tiendas_path, :title => "Tiendas", :id => 'link_tiendas')
         %ul#listienda{:style => 'display:none;'}
           - Tienda.all.each do |tienda|
-            %li= link_to(tienda.nombre, {:id => tienda.nombre, :action => 'show', :controller => 'tiendas'}, :title => tienda.nombre)
+            %li= link_to(tienda.nombre, {:id => tienda.id, :action => 'show', :controller => 'tiendas'}, :title => tienda.nombre)
       %li
         = link_to('CONTACTO', {:controller => 'pages', :action => 'contact'}, :title => "contacto", :class => 'link_others')
   .breadcrums
