added favicon on project

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     %title= h(yield(:title) || "Grupo Palsofa")
     = stylesheet_link_tag 'styles', 'main', 'nivo-slider', 'prettyPhoto'
     = javascript_include_tag 'jquery132', 'nivo-slider', 'prettyPhoto'
+    <link rel="icon" type="image/png" href="/favicon.png" />
     :javascript
       $(document).ready(function(){
         $('#link_products').hover(function(){
