added new metadata on html

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,16 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
-    %title= h(yield(:title) || "Grupo Palsofa")
+    %title= h(yield(:title) || "Tiendas de sofas en Vizcaya. Sofas en piel y tela, butacas, chaiselongue, sillones ,rinconeras, sofas cama. Venta de colchones. Grupo Palsofa")
     = stylesheet_link_tag 'styles', 'main', 'nivo-slider', 'prettyPhoto'
     = javascript_include_tag 'jquery132', 'nivo-slider', 'prettyPhoto'
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <meta name="description" content="Venta de sofas en Vizcaya. Todo tipo de sofas piel y tela, colchones, canapes, nordicos,los mejores precios, grandes oportunidades."/>
+    <meta name="keywords" content="venta de sofas en vizcaya, tiendas de sofas en Vizcaya, bizkaia, ofertas en sofas, sofas baratos, sillones,colchones, sofas cama, sofas piel, sofas a medida, sofas en bilbao"/>
+    <meta name="google-site-verification" content="lnzpUJTvjlH8fB2KFRw06dbQPfcz-hStfDKZzSnLchU" />
+    <meta name="robots" content="all"/>
+    <link rel="canonical" href="http://www.palsofa.com/" />
     :javascript
       $(document).ready(function(){
         $('#link_products').hover(function(){
