--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -9,7 +9,7 @@
       %p Somos el grupo líder en ventas de sofás en Vizcaya. En nuestras 5 tiendas encontrará la gama más amplia en sofás en piel y tela, modelos 3+2 , sofás cama, relax, butacas, chaiselongue, sofás rinconera.
       %p El Grupo Palsofá es garantía de variedad, calidad y precio. Acérquese a conocernos y seguro encontrará el sofá que está buscando.
       
-      %a.btnComprarSofa{:href => "#", :title => "comprar sofa"} Comprar Sofa
+      %a.btnComprarSofa{:href => "/products", :title => "Comprar sofa"} Comprar Sofa
     .boxRight
       %ul.ProductsHome
         - @products.each do |product|
