Solved minor issues

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
-    %title= h(yield(:title) || "Tiendas de sofas en Vizcaya. Sofas en piel y tela, butacas, chaiselongue, sillones ,rinconeras, sofas cama. Venta de colchones. Grupo Palsofa")
+    %title= "Tiendas de sofas en Vizcaya. Sofas en piel y tela, butacas, chaiselongue, sillones ,rinconeras, sofas cama. Venta de colchones. Grupo Palsofa"
     = stylesheet_link_tag 'styles', 'main', 'nivo-slider', 'prettyPhoto'
     = javascript_include_tag 'jquery132', 'nivo-slider', 'prettyPhoto'
     <link rel="icon" type="image/png" href="/favicon.png" />
