--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,6 +1,6 @@
 #footer
   .subfooter
-    = link_to('imprime tu descuento', cupon_images_path, :class => 'print', :title => "imprime tu descuento")
+    = link_to('imprime tu descuento', Image.cupon.image.url(), :class => 'print', :title => "imprime tu descuento", :target => '_blank')
     .listIcon
       %ul
         %li.bgHorarios
@@ -31,7 +31,7 @@
   .foot
     .left
       Diseño
-      %a{:href => "#", :title => "El poder de lo simple"} El poder de lo simple.
+      %a{:href => "http://elpoderdelosimple.com/", :title => "El poder de lo simple"} El poder de lo simple.
     .right
       %span © 2010 Grupo Palsofá
       Todos los derechos reservados
