--- a/app/views/tiendas/index.html.haml
+++ b/app/views/tiendas/index.html.haml
@@ -2,7 +2,7 @@
 
 #content
   #sidebar
-    %h5 SELECCIONA TU TIENDA
+    %h5 TIENDAS
     .selectTiendas
       = render :partial => '/shared/selectienda'
     .banner
