--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,9 +6,17 @@
   .sobreNosotros
     .boxLeft
       %h3 Sobre Nosotros
-      %p Somos el grupo líder en ventas de sofás en Vizcaya. En nuestras 5 tiendas encontrará la gama más amplia en sofás en piel y tela, modelos 3+2 , sofás cama, relax, butacas, chaiselongue, sofás rinconera.
-      %p El Grupo Palsofá es garantía de variedad, calidad y precio. Acérquese a conocernos y seguro encontrará el sofá que está buscando.
-      
+
+      %p
+        Somos el grupo líder en ventas de sofás y descanso en Vizcaya. En nuestras 5
+        tiendas encontrará la gama más amplia en sofás en piel y tela, modelos 3+2 ,
+        sofás cama, relax, butacas, chaiselongue, sofás rinconera, colchones,
+        sistemas de descanso, almohadas, fundas nórdicas.
+
+      %p
+        El Grupo Palsofá es garantía de variedad, calidad y precio. Acérquese a
+        conocernos y seguro encontrará el sofá o el colchón que está buscando
+
       %a.btnComprarSofa{:href => "/products", :title => "Comprar sofa"} Comprar Sofa
     .boxRight
       %ul.ProductsHome
