--- a/app/views/pages/servicios.html.haml
+++ b/app/views/pages/servicios.html.haml
@@ -17,7 +17,7 @@
         %h3 Amplio Horario
         %p
           Abrimos nuestras tiendas de lunes tarde a sábado tarde (lunes mañana, cerrado). Para conocer los horarios de cada uno de nuestros centros, consulte en la sección
-          = link_to('Tienda', tiendas_path)
+          = link_to('Tiendas', tiendas_path)
           \.
         .line
       %li.iconTransporte
