--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!! Strict
-%html
+%html{:xmlns=>"http://www.w3.org/1999/xhtml"}
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %title= "Tiendas de sofas en Vizcaya. Sofas en piel y tela, butacas, chaiselongue, sillones ,rinconeras, sofas cama. Venta de colchones. Grupo Palsofa"
