--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -29,7 +29,8 @@
         %li.fieldComment
           %label Mensaje
           %textarea#mensaje{:cols => "4", :name => "mensaje", :rows => "4"}
-      %button.btnSubmit{:type => "submit"} Enviar Consulta
+      %div
+        %button.btnSubmit{:type => "submit"} Enviar Consulta
   %br.clear/
 
 :javascript
