--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -28,7 +28,7 @@
         = link_to('TIENDAS', tiendas_path, :title => "Tiendas", :id => 'link_tiendas')
         %ul#listienda{:style => 'display:none;'}
           - Tienda.all.each do |tienda|
-            %li= link_to(tienda.nombre, {:id => tienda.id, :action => 'show', :controller => 'tiendas'}, :title => tienda.nombre)
+            %li= link_to(tienda.nombre, {:id1 => tienda.id, :action => 'index', :controller => 'tiendas'}, :title => tienda.nombre)
       %li
         = link_to('CONTACTO', {:controller => 'pages', :action => 'contact'}, :title => "contacto", :class => 'link_others')
   .breadcrums
