--- a/app/views/pages/servicios.html.haml
+++ b/app/views/pages/servicios.html.haml
@@ -7,9 +7,7 @@
         %li Transporte y montaje Gratuitos
         %li Parking propio
         %li Financiamos su compra
-    .banner
-      - image = Image.first(:conditions => {:section => 'banner'})
-      = link_to(image_tag(image.image.url), image.description, :alt => "banner") if image
+    = render :partial => '/shared/banner'
   #body
     %h5 SERVICIOS
     %ul.listServicios
