--- a/app/views/admin/images/_form.html.erb
+++ b/app/views/admin/images/_form.html.erb
@@ -13,7 +13,6 @@
             'Iconos sociales' => 'footer'
           }, :selected => ((@item.section?) ? @item.section : ''))
       %>
-
       </li>
     </ol>
   </fieldset>
@@ -28,4 +27,15 @@
     $('#new_image li:eq(1)').hide();
     $('#new_image li:eq(3)').hide();
   }
+  $(document).ready(function(){
+    $('#image_section').change(function(){
+      if($('#image_section option:selected').val() == 'cupon'){
+        $('#new_image li:eq(1)').hide();
+        $('#new_image li:eq(2)').html('Imagen o Pdf del cupon');
+      } else {
+        $('#new_image li:eq(1)').show();
+        $('#new_image li:eq(2)').html('Imagen que se añadira');
+      }
+    });
+  });
 </script>
