--- a/app/views/shared/_banner.html.haml
+++ b/app/views/shared/_banner.html.haml
@@ -1,3 +1,3 @@
 .banner
   - image = Image.first(:conditions => {:section => 'banner'}, :order => 'created_at DESC')
-  = link_to(image_tag(image.image.url), image.description, :alt => "banner") if image
+  = link_to(image_tag(image.image.url), image.url, :alt => image.description, :target => '_blank') if image
