--- a/app/views/admin/images/_form.html.erb
+++ b/app/views/admin/images/_form.html.erb
@@ -31,10 +31,10 @@
     $('#image_section').change(function(){
       if($('#image_section option:selected').val() == 'cupon'){
         $('#new_image li:eq(1)').hide();
-        $('#new_image li:eq(2)').html('Imagen o Pdf del cupon');
+        $('#new_image li:eq(2) label').html('Imagen o Pdf del cupon');
       } else {
         $('#new_image li:eq(1)').show();
-        $('#new_image li:eq(2)').html('Imagen que se añadira');
+        $('#new_image li:eq(2) label').html('Imagen que se añadira');
       }
     });
   });
