--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,7 @@
         $('#newsletter_email').focus(function(){
           $(this).val('');
         });
-        $('#slider').nivoSlider({controlNav:true, effect: 'fade', directionNav: false});
+        $('#slider').nivoSlider({controlNav:true, effect: 'fade', directionNav: false, animSpeed:500, pauseTime:6000});
         $("a[rel^='prettyPhoto']").prettyPhoto();
       });
     /[if IE 6]
